# Skillgap-analyzer

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  scrapper.py
src/: db_loader.py  main.py  scrapper.py  utils.py
src/frontend/: analysis_page.py  main.py  scrap_page.py
src/models/: base_chain_model.py  normalize_model.py  structure_model.py
src/schema/: main.py  schema.py
src/utils/: util.py
