[project]
name = "skillgap-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.14",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "seleniumbase>=4.47.0",
    "stem>=1.8.2",
    "streamlit>=1.54.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["data*", "latest_logs*", "downloaded_files*", ".idea*", ".venv*", ".vscode*", "tests*"]
